--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   table_calendar: ^3.1.1
   shared_preferences: ^2.2.3
+  awesome_notifications: ^0.9.3+1
+  awesome_notifications_core: ^0.9.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
